Fixed overflow issue

--- a/css/index.css
+++ b/css/index.css
@@ -3,6 +3,7 @@ body {
   margin: 0;
   padding: 0;
   height: 100%;
+  overflow-x: hidden;
 }
 
 
@@ -164,6 +165,7 @@ body {
   height: 300px;
   text-align: center;
   margin-bottom: 20px;
+  border-top-style: solid;
 }
 
 .menuSection{
